--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://www.dmitriydubson.com"
 languageCode = "en-us"
 theme = "m10c"
 title = "Dmitriy Dubson | Blog |"
