--- a/config.toml
+++ b/config.toml
@@ -1,20 +1,57 @@
-baseURL = "https://www.dmitriydubson.com"
+baseURL = "http://example.com/"
 languageCode = "en-us"
-theme = "m10c"
-title = "Dmitriy Dubson | Blog |"
+title = "blog |> ✨"
+theme = "minimal"
+disqusShortname = "dmitriydubson" # delete this to disable disqus comments
+googleAnalytics = ""
 
 [params]
     author = "Dmitriy Dubson"
-    description = "Senior Software Engineer"
+    description = " by Dmitriy Dubson"
+    githubUsername = "ddubson"
+    accent = "#E65100"
+    showBorder = true
+    backgroundColor = "#FBE9E7"
+    font = "Fira Code" # should match the name on Google Fonts!
+    highlight = true
+    highlightStyle = "default"
+    highlightLanguages = ["haskell", "kotlin", "java"]
 
-    [params.notes]
-    description = "Technical Notes"
-    url = "https://notes.dmitriydubson.com"
+[[menu.main]]
+    url = "/"
+    name = "Home"
+    weight = 1
 
-    [[params.social]]
+# [[menu.main]]
+#     url = "/about/"
+#     name = "About"
+#     weight = 2
+
+[[menu.main]]
+    url = "/post/"
+    name = "Posts"
+    weight = 2
+
+# [[menu.main]]
+#     url = "/project/"
+#     name = "Projects"
+#     weight = 4
+
+# Social icons to be shown on the right-hand side of the navigation bar.
+# The "name" field should match the name of the icon in Font Awesome.
+# The list of available icons can be found at http://fontawesome.io/icons.
+
+[[menu.icon]]
+    url = "https://github.com/ddubson/"
     name = "github"
-    url = "https://github.com/ddubson"
+    weight = 1
 
-    [[params.social]]
+[[menu.icon]]
+    url = "https://twitter.com/DmitriyAtHome/"
     name = "twitter"
-    url = "https://twitter.com/DmitriyAtHome"
+    weight = 2
+
+[[menu.icon]]
+    url = "https://www.linkedin.com/in/ddubson1/"
+    name = "linkedin"
+    weight = 3
