Even more optimizations

--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,8 @@ googleAnalytics = ""
     font = "Fira Code" # should match the name on Google Fonts!
     highlight = true
     highlightStyle = "gruvbox-dark"
-    highlightLanguages = ["haskell", "kotlin", "java"]
+    highlightLanguages = ["haskell", "kotlin", "java", "typescript", "javascript"]
+    copyright = "Made and curated with 🧡in New York"
 
 [[menu.main]]
     url = "/"
