Add tech playlist link

--- a/config.toml
+++ b/config.toml
@@ -34,10 +34,10 @@ googleAnalytics = ""
     name = "Posts"
     weight = 2
 
-# [[menu.main]]
-#     url = "/project/"
-#     name = "Projects"
-#     weight = 4
+[[menu.main]]
+     url = "https://hackmd.io/@ddubson/B1mQzbCdL"
+     name = "Tech Playlist 📻"
+     weight = 3
 
 # Social icons to be shown on the right-hand side of the navigation bar.
 # The "name" field should match the name of the icon in Font Awesome.
