--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ googleAnalytics = ""
     showBorder = true
     backgroundColor = "#FBE9E7"
     font = "Fira Code" # should match the name on Google Fonts!
-    css = ["/css/extend.css"]
+    css = ["css/extend.css"]
     highlight = true
     disableComments = false
     highlightStyle = "gruvbox-dark"
