--- a/config.toml
+++ b/config.toml
@@ -11,8 +11,8 @@ googleAnalytics = ""
     githubUsername = "ddubson"
     accent = "#E65100"
     showBorder = true
-    backgroundColor = "#FBE9E7"
-    font = "Fira Code" # should match the name on Google Fonts!
+    backgroundColor = "#fffbfa"
+    font = "Inconsolata" # should match the name on Google Fonts!
     css = ["css/extend.css"]
     highlight = true
     disableComments = false
