--- a/config.toml
+++ b/config.toml
@@ -32,14 +32,19 @@ googleAnalytics = ""
     weight = 2
 
 [[menu.main]]
+    url = "/kit/"
+    name = "Kit"
+    weight = 3
+
+[[menu.main]]
     url = "/garden/"
     name = "The Digital Garden"
-    weight = 3
+    weight = 4 
 
 [[menu.main]]
      url = "https://hackmd.io/@ddubson/B1mQzbCdL"
      name = "Tech Playlist 📻"
-     weight = 4
+     weight = 5
 
 # Social icons to be shown on the right-hand side of the navigation bar.
 # The "name" field should match the name of the icon in Font Awesome.
